Configuration of brain in database.
