# router.js
@@ -855,6 +855,36 @@ module.exports = function(io) {
     return res.sendStatus(500);
   });
 
+  //////////////////
+  // MANAGE ROLES
+
+  router.get('/configuration/lang', hasPerm('CONFIGURE_BRAIN'), (req, res, next) => {
+    hub.ConfigurationManager.getLang().then(lang => {
+      return res.json({ success: true, message: `Lang is ${lang}.`, lang });
+    }).catch(next);
+  });
+
+  router.put('/configuration/lang/:lang', hasPerm('CONFIGURE_BRAIN'), (req, res, next) => {
+    hub.ConfigurationManager.setLang(req.params.lang).then(lang => {
+      return res.json({ success: true, message: `Lang set to ${lang}.`, lang });
+    }).catch(next);
+  });
+
+  router.get('/configuration/botname', hasPerm('CONFIGURE_BRAIN'), (req, res, next) => {
+    hub.ConfigurationManager.getBotname().then(botname => {
+      return res.json({ success: true, message: `Out Greatest Bot bears the name ${botname}.`, botname });
+    }).catch(next);
+  });
+
+  router.put('/configuration/botname/:botname', hasPerm('CONFIGURE_BRAIN'), (req, res, next) => {
+    hub.ConfigurationManager.setBotname(req.params.botname).then(botname => {
+      return res.json({ success: true, message: `Bot name set to ${botname}.`, botname });
+    }).catch(next);
+  });
+
+  //
+  //////////////////
+
   ///////////////////////////////////////////////////////////////////////////////
 
   ///////////////////////////////////////////////////////////////////////////////
